@@ -125,6 +125,17 @@
                     <texture>overlays/volume/volume-back.png</texture>
                     <aspectratio align="center">keep</aspectratio>
                     <colordiffuse>Mod_Tags</colordiffuse>
+                    <visible>![Window.IsVisible(home) + StringCompare(Skin.String(homescreen.style),simple)]</visible>
+                </control>
+                <control type="image">
+                    <posx>-4</posx>
+                    <posy>27</posy>
+                    <width>100</width>
+                    <height>100</height>
+                    <texture>overlays/volume/volume-back.png</texture>
+                    <aspectratio align="center">keep</aspectratio>
+                    <colordiffuse>mod-infotags-d</colordiffuse>
+                    <visible>[Window.IsVisible(home) + StringCompare(Skin.String(homescreen.style),simple)]</visible>
                 </control>
                 <control type="group">
                     <visible>!Player.Passthrough</visible>
@@ -151,6 +162,20 @@
                         <textcolor>Mod_Tags</textcolor>
                         <scroll>false</scroll>
                         <align>right</align>
+                        <visible>![Window.IsVisible(home) + StringCompare(Skin.String(homescreen.style),simple)]</visible>
+                    </control>
+                    <control type="label">
+                        <description>Volume label</description>
+                        <posx>0</posx>
+                        <posy>27</posy>
+                        <width>750</width>
+                        <height>100</height>
+                        <label>$INFO[Player.Volume]</label>
+                        <font>Font-Alaska-S32-BL</font>
+                        <textcolor>mod-infotags-d</textcolor>
+                        <scroll>false</scroll>
+                        <align>right</align>
+                        <visible>[Window.IsVisible(home) + StringCompare(Skin.String(homescreen.style),simple)]</visible>
                     </control>
                 </control>
                 <control type="group">
